test/expected/declare_lf-c.out
declare x as long float
        ^
9: error: "long float" is illegal for built-in type unless K&RC
